Closed
Bug 318884
Opened 19 years ago
Closed 19 years ago
Crash on closing last window (optimized build and Xcode 2.2)
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bugzilla-graveyard, Assigned: sfraser_bugs)
Details
(Keywords: crash)
Camino built with -O3, Mac OS 10.4u SDK, Xcode 2.2 crashes when the last open window is closed. Relevant portion of crash log:
Command: Camino
Path: /Users/clawson/mozilla/camino/build/Deployment/Camino.app/Contents/MacOS/Camino
Parent: WindowServer [98]
Version: 1.0+ (1.0+)
PID: 1593
Thread: 0
Exception: EXC_BAD_ACCESS (0x0001)
Codes: KERN_INVALID_ADDRESS (0x0001) at 0x20386000
Thread 0 Crashed:
0 <<00000000>> 0xfffeff20 objc_msgSend_rtp + 32
1 com.apple.CoreFoundation 0x907406ac __CFArrayReleaseValues + 640
2 com.apple.CoreFoundation 0x90740418 __CFArrayDeallocate + 284
3 com.apple.CoreFoundation 0x9073d554 _CFRelease + 240
4 com.apple.Foundation 0x928baea8 NSPopAutoreleasePool + 536
5 com.apple.AppKit 0x93680b54 -[NSApplication run] + 544
6 com.apple.AppKit 0x93771618 NSApplicationMain + 452
7 org.mozilla.camino 0x000031a0 _start + 344 (crt.c:272)
8 org.mozilla.camino 0x00003044 start + 60
I can do a fresh build with symbols tomorrow, and I'll post the crash report from that when I get it.
Comment 1•19 years ago
|
||
Over-releasing an NSMenu, crash when the autorelease pool releases.
We saw this once before with the 10.4 SDK. Last time, the cause was a extra releases added as workaround for memory leaks that occurred in the system when linked against earlier SDKs.
2005-12-03 07:33:41.335 Camino[1840] *** Selector 'release' sent to dealloced instance 0x1b81920 of class NSMenu.
Break at '-[_NSZombie release]' to debug.
2005-12-03 07:33:41.336 Camino[1840] *** -[NSAutoreleasePool dealloc]: Exception ignored while releasing an object in an autorelease pool: *** Selector 'release' sent to dealloced instance 0x1b81920 of class NSMenu.
Break at '-[_NSZombie release]' to debug.
| Reporter | ||
Comment 2•19 years ago
|
||
Simon, per Mark's comments in bug 318845, might this have been caused by your recent check-in to CertificateView.mm?
cl
| Reporter | ||
Comment 3•19 years ago
|
||
(In reply to comment #2)
> Simon, per Mark's comments in bug 318845, might this have been caused by your
> recent check-in to CertificateView.mm?
Just did a build with that commented out, and it still crashes on close. I built with --enable_strip removed this time, but the crash log looks the same to me.
cl
Comment 4•19 years ago
|
||
Josh, might this have something to do with your cocoa menu checkin yesterday?
| Assignee | ||
Comment 5•19 years ago
|
||
I added some NSMenu releases in [BrowserWindowController dealloc], which is probably the cause.
Assignee: mikepinkerton → sfraser_bugs
| Assignee | ||
Comment 6•19 years ago
|
||
(In reply to comment #1)
> Over-releasing an NSMenu, crash when the autorelease pool releases.
>
> We saw this once before with the 10.4 SDK. Last time, the cause was a extra
> releases added as workaround for memory leaks that occurred in the system when
> linked against earlier SDKs.
Yeah, I have a short memory and put these back.
| Assignee | ||
Comment 7•19 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•