Fix bug 318884: crash when closing last window if built with 10.4u SDK. Don't release menus in the nib.